# thalia

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
examples/: main.th
grammars/: thalia.ebnf
src/: ast_view.cpp  ast_view.hpp  error_queue.cpp  error_queue.hpp  expr_view.cpp  expr_view.hpp  main.cpp  stmt_view.cpp  stmt_view.hpp
syntax/: CMakeLists.txt
syntax/public/thalia-syntax/: errors.hpp  exprs.hpp  lexer.hpp  node.hpp  parser.hpp  stmts.hpp  token.hpp
syntax/src/: lexer.cpp  parser.cpp  parser_exprs.cpp  parser_main.cpp  parser_stmts.cpp  token.cpp
syntax/test/: lexer_test.cpp  token_test.cpp
